# automation

./: .env.example  .gitignore  Cargo.toml  LICENSE  credentials.example.toml
src/: cli.rs  credentials.rs  http.rs  lib.rs  macros.rs  main.rs  post.rs  secret.rs
src/service/: bluesky.rs  bsky.rs  discord.rs  mastodon.rs  mod.rs  twitter.rs
