[package]
name = "mwa"
version = "0.2.0"
edition = "2024"
license = "MIT"
publish = false

# ===== Dependencies =====

# -- errors --

[dependencies.anyhow]
version = "1"

# -- logging --

[dependencies.log]
version = "0.4"

[dependencies.env_logger]
version = "0.11"

# -- process --

[dependencies.dotenvy]
version = "0.15"

# -- serde --

[dependencies.serde]
version = "1"
features = ["derive", "rc"]

[dependencies.envy]
version = "0.4"

# -- runtime --

[dependencies.tokio]
version = "1.45"
features = ["full"]

# -- http --

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["native-tls"]

# -- bluesky --

[dependencies.bsky-sdk]
version = "0.1"
default-features = false

[dependencies.atrium-xrpc-client]
version = "0.5"
default-features = false
features = ["reqwest"]

# -- discord --

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
branch = "next"
default-features = false
features = ["native_tls_backend", "http", "model", "builder"]

# -- mastodon --

[dependencies.mastodon-async]
git = "https://github.com/dscottboggs/mastodon-async.git"
branch = "comb"
default-features = false

# -- twitter --

[dependencies.tweety-rs]
version = "0.1.5"

# ===== Lints =====

[lints.rust]
unnameable_types = "warn"
unreachable_pub = "warn"
elided_lifetimes_in_paths = "deny"
unsafe_op_in_unsafe_fn = "deny"
